Scrollbars - temp fix - todo: make themable

--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,15 @@ br {
   line-height: 2rem;
 }
 
+/* for custom scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
 ::-webkit-scrollbar-track {
   background-color: transparent; /* Fully transparent */
-  background-color: red;
+  background-color: rgba(255,255,255,0.2);
 }
 
 ::-webkit-scrollbar-thumb {
